Update developer name in index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <img src="costume1(1).png" alt="iix OS Logo" class="main-logo">
         <h1>Sınırları Zorla, Sistemi Yönet.</h1>
-        <p>İsmail tarafından geliştirilen, Debian tabanlı modern sızma testi işletim sistemi.</p>
+        <p>İsmail Örmeci tarafından geliştirilen, Debian tabanlı modern sızma testi işletim sistemi.</p>
         <a href="#download" class="btn-main">ISO'yu İndir</a>
     </header>
 
