--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img src="costume1(1).png" alt="iix OS Logo" class="main-logo">
         <h1>Sınırları Zorla, Sistemi Yönet.</h1>
         <p>İsmail Örmeci tarafından geliştirilen, Debian tabanlı modern sızma testi işletim sistemi.</p>
-        <a href="#download" class="btn-main">ISO'yu İndir</a>
+        <a href="#download" class="btn-main">ISO'yu İndir (Beta)</a>
     </header>
 
     <section id="features">
@@ -44,7 +44,7 @@
         <div class="download-box">
             <p>Dosya Boyutu: 1.2 GB</p>
             <p>Mimari: 64-bit (amd64)</p>
-            <a href="ISO_LINKINI_BURAYA_KOY" class="btn-download">Hemen İndir (.iso)</a>
+            <a href="ISO_LINKINI_BURAYA_KOY" class="btn-download">Hemen İndir (Beta)</a>
         </div>
     </section>
 
