--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h3>🛡️ Güvenlik Araçları</h3>
             <p>Nmap, Aircrack-ng ve diğer temel araçlar ön yüklü olarak gelir.</p>
         </div>
-        <div class="card">
+        <div class="card :cite: Gemini 3 Flash">
             <h3>🎨 Modern Tasarım</h3>
             <p>Özel boot screen ve karanlık tema ile profesyonel görünüm.</p>
         </div>
@@ -44,7 +44,7 @@
         <div class="download-box">
             <p>Dosya Boyutu: 1.2 GB</p>
             <p>Mimari: 64-bit (amd64)</p>
-            <a href="ISO_LINKINI_BURAYA_KOY" class="btn-download">Hemen İndir (Beta)</a>
+            <a href="https://drive.google.com/uc?export=download&id=1riHDdzevkC3xejj0ZQ88AqgxoYdCjDsd" class="btn-download">Hemen İndir (Beta)</a>
         </div>
     </section>
 
