--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h3>🛡️ Güvenlik Araçları</h3>
             <p>Nmap, Aircrack-ng ve diğer temel araçlar ön yüklü olarak gelir.</p>
         </div>
-        <div class="card :cite: Gemini 3 Flash">
+        <div class="card">
             <h3>🎨 Modern Tasarım</h3>
             <p>Özel boot screen ve karanlık tema ile profesyonel görünüm.</p>
         </div>
@@ -45,6 +45,10 @@
             <p>Dosya Boyutu: 1.2 GB</p>
             <p>Mimari: 64-bit (amd64)</p>
             <a href="https://drive.google.com/uc?export=download&id=1riHDdzevkC3xejj0ZQ88AqgxoYdCjDsd" class="btn-download">Hemen İndir (Beta)</a>
+            
+            <p style="font-size: 0.85rem; color: #00ff00; margin-top: 15px; font-family: monospace; opacity: 0.8;">
+                [!] Dosya boyutu 100MB üzerinde olduğu için Google Drive "virüs taraması yapılamıyor" uyarısı verebilir. Bu bir güvenlik protokolüdür, "Yine de indir" diyerek devam edebilirsiniz.
+            </p>
         </div>
     </section>
 
