Format warning message for better readability

--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
             <a href="https://drive.google.com/uc?export=download&id=1riHDdzevkC3xejj0ZQ88AqgxoYdCjDsd" class="btn-download">Hemen İndir (Beta)</a>
             
             <p style="font-size: 0.85rem; color: #00ff00; margin-top: 15px; font-family: monospace; opacity: 0.8;">
-                [!] Dosya boyutu 100MB üzerinde olduğu için Google Drive "virüs taraması yapılamıyor" uyarısı verebilir. Bu bir güvenlik protokolüdür, "Yine de indir" diyerek devam edebilirsiniz.
+                [!] Dosya boyutu 100MB üzerinde olduğu için Google Drive 
+                "virüs taraması yapılamıyor" uyarısı verebilir. 
+                Bu bir güvenlik protokolüdür, 
+                "Yine de indir" diyerek devam edebilirsiniz.
             </p>
         </div>
     </section>
