Update download section and improve text clarity

--- a/index.html
+++ b/index.html
@@ -42,15 +42,16 @@
     <section id="download">
         <h2>iix OS v1.6 "Final Brand"</h2>
         <div class="download-box">
-            <p>Dosya Boyutu: 1.2 GB</p>
-            <p>Mimari: 64-bit (amd64)</p>
+            <p><strong>Boyut:</strong> 1.2 GB | <strong>Mimari:</strong> 64-bit</p>
+            <div style="background: rgba(0, 255, 0, 0.1); border: 1px solid #00ff00; padding: 10px; border-radius: 8px; margin-bottom: 20px;">
+                <p style="margin: 5px 0;">👤 <strong>Kullanıcı:</strong> iixOS-user</p>
+                <p style="margin: 5px 0;">🔑 <strong>Şifre:</strong> 1234</p>
+            </div>
+
             <a href="https://drive.google.com/uc?export=download&id=1riHDdzevkC3xejj0ZQ88AqgxoYdCjDsd" class="btn-download">Hemen İndir (Beta)</a>
             
             <p style="font-size: 0.85rem; color: #00ff00; margin-top: 15px; font-family: monospace; opacity: 0.8;">
-                [!] Dosya boyutu 100MB üzerinde olduğu için Google Drive 
-                "virüs taraması yapılamıyor" uyarısı verebilir. 
-                Bu bir güvenlik protokolüdür, 
-                "Yine de indir" diyerek devam edebilirsiniz.
+                [!] Büyük dosya boyutu nedeniyle Google virüs taraması yapamaz. "Yine de indir" diyerek devam edin.
             </p>
         </div>
     </section>
